// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a set of intructions that is only about state > that receives a change > and then receives a change on a different property > should now contain two instructions 1`] = `
[
  "context.fillStyle = \\"#000\\"",
  "context.strokeStyle = \\"#000\\"",
]
`;

exports[`a set of intructions that is only about state > that receives a change > and then receives a change on the same property > should still contain only one instruction 1`] = `
[
  "context.fillStyle = \\"#000\\"",
]
`;

exports[`a set of intructions that is only about state > that receives a change > and then receives a change that reverts that one > should contain no instructions anymore 1`] = `[]`;

exports[`a set of intructions that is only about state > that receives a change > should have recorded the change 1`] = `
[
  "context.fillStyle = \\"#000\\"",
]
`;
